navbar z index increase to prevent carousel button overlap

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ h4 {
     position: sticky;
     position: -webkit-sticky;
     top: 0;
+    z-index: 2;
 }
 
 /* .sticky + .content {
